# routes/index.js
@@ -5,6 +5,7 @@ import user from './user.route.js'
 import auth from './auth.route.js'
 import orders from './orders.route.js'
 import order_item from './order_item.route.js'
+import payment from './payment.route.js'
 
 const router = express.Router()
 
@@ -13,5 +14,6 @@ router.use('/user', user)
 router.use('/books', book)
 router.use('/orders', orders)
 router.use('/order_item', order_item)
+router.use('/payment', payment)
 
 export default router
